[metadata]
name = plasp
version = 1.0.0
author = Vivien Cabannes
author_email = vivien.cabannes@gmail.com
description = Learning from partial supervision
long_description = file: README.rst
url = https://github.com/VivienCabannes/partial_labelling
project_urls =
    Bug Tracker = https://github.com/VivienCabannes/partial_labelling/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
